<resources>
    <string name="app_name">Forms</string>

    <string name="login_form_title">Ceate your Luvers Profile</string>
    <string name="login_form_username">Username</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">LOGIN</string>
    <string name="login_form_email">Email</string>
    <string name="login_form_name">Name</string>
    <string name="title_activity_login_landing">LoginLanding</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date_of_birth">DOB</string>
    <string name="create_another_acct_btn">Create another account</string>
    <string name="profile_picture_txt">Profile Picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Matches</string>
    <string name="tab_text_3">Settings</string>
    <string name="introduction_tv">Tell them about you!</string>
    <string name="occupation_tv">Occupation</string>
    <string name="description_text">Description</string>
    <string name="max_distance_text">Max Distance:</string>
    <string name="gender_text">Gender:</string>
    <string name="private_account_tv">Private Account?</string>
    <string name="button_update_text">Update Changes</string>
    <string name="age_range_tv">Age Range</string>
    <string name="your_name_template">Your Name</string>
    <string name="dob_template">DOB</string>
    <string name="occupation_template">Occupation</string>
    <string name="button_like_txt">Like</string>
    <string name="title_text_match">Title</string>
    <string name="current_loc_text">Your Current Location:</string>

</resources>