<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_profile"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/login_cv_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="@dimen/cardview_elevation"
            card_view:cardElevation="@dimen/cardview_elevation"
            android:background="@color/black_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/linearlayout_padding">

                <ImageView
                    android:id="@+id/pfp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/drake"
                    android:contentDescription="@string/profile_picture_txt"></ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/cardview_margin"
                        android:layout_marginRight="@dimen/cardview_margin"
                        android:text="@string/your_name_template"
                        android:textSize="@dimen/text_size_name" />

                    <TextView
                        android:id="@+id/age_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/cardview_margin"
                        android:text="@string/dob_template"
                        android:textSize="@dimen/text_size_name" />
                </LinearLayout>

                <TextView
                    android:id="@+id/occupation_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/occupation_margin_top"
                    android:text="@string/occupation_template"
                    android:textSize="@dimen/smaller_text_size" />

                <TextView
                    android:id="@+id/description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/occupation_margin_top"
                    android:text="@string/description_text"
                    android:textSize="@dimen/smaller_text_size" />

                <ImageView
                    android:id="@+id/heart_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/image_view_top_margin"
                    android:src="@drawable/ic_baseline_favorite_24" />
            </LinearLayout>



        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
