<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_fragment"
    tools:context=".ui.main.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_margin="@dimen/settings_cv_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_elevation"
                card_view:cardElevation="@dimen/cardview_elevation"
                android:background="#000">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/match_reminder_tv"
                        android:layout_width="@dimen/settings_tv_width"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/appbar_padding"
                        android:text="Match Reminder: "
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/match_reminder_spinner"
                        android:layout_width="@dimen/settings_tv_width"
                        android:layout_height="wrap_content"
                        android:max="100"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/match_reminder_tv"
                        card_view:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_margin="@dimen/settings_cv_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_elevation"
                card_view:cardElevation="@dimen/cardview_elevation"
                android:background="#000">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/maximum_distance"
                        android:layout_width="@dimen/settings_tv_width"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/appbar_padding"
                        android:text="@string/max_distance_text"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/max_distance_seek"
                        android:layout_width="@dimen/settings_tv_width"
                        android:layout_height="wrap_content"
                        android:stepSize="1"
                        android:valueFrom="0"
                        android:valueTo="100"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/maximum_distance"
                        card_view:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_margin="@dimen/settings_cv_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_elevation"
                card_view:cardElevation="@dimen/cardview_elevation"
                android:background="#000">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/gender_tv"
                        android:layout_width="124dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/appbar_padding"
                        android:text="@string/gender_text"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/gender_spinner"
                        android:layout_width="@dimen/settings_tv_width"
                        android:layout_height="wrap_content"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/gender_tv"
                        card_view:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="@dimen/settings_cv_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_elevation"
                card_view:cardElevation="@dimen/cardview_elevation"
                android:background="#000">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/public_private_tv"
                        android:layout_width="@dimen/settings_tv_width"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/appbar_padding"
                        android:text="@string/private_account_tv"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/public_private_spinner"
                        android:layout_width="@dimen/settings_tv_width"
                        android:layout_height="wrap_content"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/public_private_tv"
                        card_view:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_margin="@dimen/settings_cv_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_elevation"
                card_view:cardElevation="@dimen/cardview_elevation"
                android:background="#000">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/age_range_tv"
                        android:layout_width="@dimen/settings_tv_width"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/appbar_padding"
                        android:text="@string/age_range_tv"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/age_range_bar"
                        android:layout_width="@dimen/settings_tv_width"
                        android:layout_height="wrap_content"
                        android:stepSize="1"
                        android:valueFrom="0"
                        android:valueTo="60"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/age_range_tv"
                        card_view:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/update_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/appbar_padding_top"
                android:layout_gravity="center"
                android:text="@string/button_update_text"/>


        </LinearLayout>
    </ScrollView>
</FrameLayout>